[package]
name = "chronochain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rfc = { git = "https://github.com/pyfisch/rfc3161" }
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
ring = "0.17.14"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"

